--- a/WarrantyReport2_files/Warr2_1.htm
+++ b/WarrantyReport2_files/Warr2_1.htm
@@ -23,31 +23,51 @@ List of table columns
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr12.htm#391">Keyword</a>
+<p align="left"><a href="Warr12.htm#383">Id</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr12.htm#391">Keyword</a>
+<p align="left"><a href="Warr12.htm#383">Id</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr12.htm#397">CreationDate</a>
+<p align="left"><a href="Warr12.htm#390">UserId</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr12.htm#397">CreationDate</a>
+<p align="left"><a href="Warr12.htm#390">UserId</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr6.htm#22">CustomerId</a>
+<p align="left"><a href="Warr12.htm#397">Keyword</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr6.htm#22">CustomerId</a>
+<p align="left"><a href="Warr12.htm#397">Keyword</a>
+</p>
+</td>
+</tr>
+<tr>
+<td class="TD2">
+<p align="left"><a href="Warr12.htm#403">CreationDate</a>
+</p>
+</td>
+<td class="TD2">
+<p align="left"><a href="Warr12.htm#403">CreationDate</a>
+</p>
+</td>
+</tr>
+<tr>
+<td>
+<p align="left"><a href="Warr6.htm#22">WarrantyOwnerId</a>
+</p>
+</td>
+<td>
+<p align="left"><a href="Warr6.htm#22">WarrantyOwnerId</a>
 </p>
 </td>
 </tr>
