--- a/WarrantyReport2_files/Warr8.htm
+++ b/WarrantyReport2_files/Warr8.htm
@@ -85,7 +85,7 @@ go<br />
 create table Products (<br />
    ProductId            bigint               not null,<br />
    Sku                  varchar(50)          not null,<br />
-   Ean                  varchar(50           not null,<br />
+   EAN                  varchar(50)          not null,<br />
    Materials            varchar(50)          null,<br />
    Grid                 varchar(50)          null,<br />
    CreationDate         datetime             not null,<br />
@@ -366,11 +366,11 @@ go<br />
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr8.htm#167">Ean</a>
+<p align="left"><a href="Warr8.htm#167">EAN</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr8.htm#167">Ean</a>
+<p align="left"><a href="Warr8.htm#167">EAN</a>
 </p>
 </td>
 </tr>
@@ -1089,10 +1089,10 @@ go<br />
 </tr>
 </table><br />
 <h2>
-<a name="167">Column Ean of the table Products</a> 
+<a name="167">Column EAN of the table Products</a> 
 </h2>
 <h3>
-<a name="168">Card of the column Ean of the table Products</a> 
+<a name="168">Card of the column EAN of the table Products</a> 
 </h3>
 <table class="Form" border="1" cellspacing="1" width="100%">
 <tr>
@@ -1101,7 +1101,7 @@ go<br />
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr8.htm#167">Ean</a>
+<p align="left"><a href="Warr8.htm#167">EAN</a>
 </p>
 </td>
 </tr>
@@ -1111,7 +1111,7 @@ go<br />
 </p>
 </td>
 <td width="75%">
-<p align="left"><a href="Warr8.htm#167">Ean</a>
+<p align="left"><a href="Warr8.htm#167">EAN</a>
 </p>
 </td>
 </tr>
@@ -1121,7 +1121,7 @@ go<br />
 </p>
 </td>
 <td width="75%">
-<p align="left">varchar(50
+<p align="left">varchar(50)
 </p>
 </td>
 </tr>
@@ -1137,7 +1137,7 @@ go<br />
 </tr>
 </table><br />
 <h3>
-<a name="169">Check constraint name of the column Ean of the table Products</a> 
+<a name="169">Check constraint name of the column EAN of the table Products</a> 
 </h3>
 <table class="Text" border="1" cellpadding="3" cellspacing="1" width="100%"><tr><td>
 <p align="left">CKC_EAN_PRODUCTS
@@ -1145,7 +1145,7 @@ go<br />
 </td></tr>
 </table><br />
 <h3>
-<a name="170">Check of the column Ean of the table Products</a> 
+<a name="170">Check of the column EAN of the table Products</a> 
 </h3>
 <table class="Form" border="1" cellspacing="1" width="100%">
 <tr>
@@ -1240,7 +1240,7 @@ go<br />
 </tr>
 </table><br />
 <h3>
-<a name="171">Server validation rule of the column Ean of the table Products</a> 
+<a name="171">Server validation rule of the column EAN of the table Products</a> 
 </h3>
 <table class="Text" border="1" cellpadding="3" cellspacing="1" width="100%"><tr><td>
 <p align="left">%MINMAX% and %LISTVAL% and %UPPER% and %LOWER% and %RULES%
@@ -1248,7 +1248,7 @@ go<br />
 </td></tr>
 </table><br />
 <h3>
-<a name="172">List of extended attributes of the table column Ean</a> 
+<a name="172">List of extended attributes of the table column EAN</a> 
 </h3>
 <table class="Grid" border="1" cellspacing="1" width="100%">
 <tr>
