new report after lunch

--- a/WarrantyReport2_files/Warr1.htm
+++ b/WarrantyReport2_files/Warr1.htm
@@ -20,15 +20,16 @@
 <tr>
 <td><img border="0" src="Warr0.png" alt="Warranty" name="Warr0.png" usemap="#Warr0_map" /></td>
 <map name="Warr0_map">
-<area shape="rect" coords="274,304,486,368" href="Warr12.htm#373" alt="Table SearchHistory" />
-<area shape="rect" coords="23,512,235,587" href="Warr11.htm#325" alt="Table Roles" />
-<area shape="rect" coords="298,397,520,472" href="Warr10.htm#276" alt="Table RolePermission" />
-<area shape="rect" coords="304,533,515,619" href="Warr7.htm#90" alt="Table Permissions" />
-<area shape="rect" coords="288,161,500,269" href="Warr8.htm#144" alt="Table Products" />
-<area shape="rect" coords="279,5,500,113" href="Warr9.htm#210" alt="Table ProductWarranty" />
-<area shape="rect" coords="20,340,237,459" href="Warr13.htm#415" alt="Table Users" />
-<area shape="rect" coords="5,160,242,279" href="Warr14.htm#489" alt="Table WarrantyCards" />
-<area shape="rect" coords="1,1,238,131" href="Warr6.htm#12" alt="Table Customers" />
+<area shape="rect" coords="200,200,359,242" href="Warr6.htm#12" alt="Table Country" />
+<area shape="rect" coords="272,347,439,398" href="Warr13.htm#406" alt="Table SearchHistory" />
+<area shape="rect" coords="2,480,169,540" href="Warr12.htm#358" alt="Table Roles" />
+<area shape="rect" coords="298,411,474,470" href="Warr11.htm#309" alt="Table RolePermission" />
+<area shape="rect" coords="244,510,411,578" href="Warr8.htm#122" alt="Table Permissions" />
+<area shape="rect" coords="368,185,536,271" href="Warr9.htm#176" alt="Table Products" />
+<area shape="rect" coords="362,0,540,86" href="Warr10.htm#242" alt="Table ProductWarranty" />
+<area shape="rect" coords="2,350,173,444" href="Warr14.htm#448" alt="Table Users" />
+<area shape="rect" coords="1,170,185,264" href="Warr15.htm#522" alt="Table WarrantyCards" />
+<area shape="rect" coords="0,1,188,104" href="Warr7.htm#42" alt="Table Customers" />
 </map>
 </tr>
 </table>
