--- a/WarrantyReport2_files/Warr5.htm
+++ b/WarrantyReport2_files/Warr5.htm
@@ -23,91 +23,101 @@
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr6.htm#12">Customers</a>
+<p align="left"><a href="Warr6.htm#12">Country</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr6.htm#12">Customers</a>
+<p align="left"><a href="Warr6.htm#12">Country</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr7.htm#90">Permissions</a>
+<p align="left"><a href="Warr7.htm#42">Customers</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr7.htm#90">Permissions</a>
+<p align="left"><a href="Warr7.htm#42">Customers</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr8.htm#144">Products</a>
+<p align="left"><a href="Warr8.htm#122">Permissions</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr8.htm#144">Products</a>
+<p align="left"><a href="Warr8.htm#122">Permissions</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr9.htm#210">ProductWarranty</a>
+<p align="left"><a href="Warr9.htm#176">Products</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr9.htm#210">ProductWarranty</a>
+<p align="left"><a href="Warr9.htm#176">Products</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr10.htm#276">RolePermission</a>
+<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr10.htm#276">RolePermission</a>
+<p align="left"><a href="Warr10.htm#242">ProductWarranty</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr11.htm#325">Roles</a>
+<p align="left"><a href="Warr11.htm#309">RolePermission</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr11.htm#325">Roles</a>
+<p align="left"><a href="Warr11.htm#309">RolePermission</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr12.htm#373">SearchHistory</a>
+<p align="left"><a href="Warr12.htm#358">Roles</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr12.htm#373">SearchHistory</a>
+<p align="left"><a href="Warr12.htm#358">Roles</a>
 </p>
 </td>
 </tr>
 <tr>
 <td class="TD2">
-<p align="left"><a href="Warr13.htm#415">Users</a>
+<p align="left"><a href="Warr13.htm#406">SearchHistory</a>
 </p>
 </td>
 <td class="TD2">
-<p align="left"><a href="Warr13.htm#415">Users</a>
+<p align="left"><a href="Warr13.htm#406">SearchHistory</a>
 </p>
 </td>
 </tr>
 <tr>
 <td>
-<p align="left"><a href="Warr14.htm#489">WarrantyCards</a>
+<p align="left"><a href="Warr14.htm#448">Users</a>
 </p>
 </td>
 <td>
-<p align="left"><a href="Warr14.htm#489">WarrantyCards</a>
+<p align="left"><a href="Warr14.htm#448">Users</a>
+</p>
+</td>
+</tr>
+<tr>
+<td class="TD2">
+<p align="left"><a href="Warr15.htm#522">WarrantyCards</a>
+</p>
+</td>
+<td class="TD2">
+<p align="left"><a href="Warr15.htm#522">WarrantyCards</a>
 </p>
 </td>
 </tr>
